# LoFi-Avoid

./: .gitignore  README.md  pyproject.toml  requirements.txt
adapters/inha_brain/: README.md
baselines/geometry_pipeline/: README.md
baselines/tuned_filters/: README.md
configs/: baseline.yaml  model_xgboost.yaml  tuned.yaml
docs/: dataset.md  evaluation.md  integration_inha_brain.md  problem.md
evaluation/: plot_runs.py
examples/sample_runs/: README.md
models/xgboost_candidate/: README.md  train.py
src/depth_avoid_ml/: __init__.py  metrics.py  plot_runs.py  run_io.py
tests/: README.md
